Version 0.2.6 (2018-)
- Displaying current filename in title (Issue #76) @danielperna84
- Added menu item to open configurator in new tab (Issue #76) @danielperna84

Version 0.2.5 (2018-01-27)
- Added warning-logs for access failure @danielperna84
- Added transparency to whitespace characters @danielperna84
- Using external repository for Docker @Munsio
- Modify BANNED_IPS and ALLOWED_NETWORKS at runtime @danielperna84
- Use relative paths in webserver @danielperna84
- Added "Sesame" feature @danielperna84

Version 0.2.4 (2018-01-02)
- Added YAML linting @AtoxIO
- Added IPv6 support @danielperna84

Version 0.2.3 (2017-11-12)
- Switched away from removed bootstrap API @danielperna84
- Added homeassistant-trigger @danielperna84

Version 0.2.2 (2017-11-01)
- Added option to list directories first @dimagoltsman
- Updated dependencies @jmart518

Version 0.2.1 (2017-10-12)
- Added script reloading

Version 0.2.0 (2017-09-25)
- Update MaterializeCSS to 0.100.1 @jmart518
- Added git push option @danielperna84

Version 0.1.9 (2017-08-16)
- Updated external libraries @jmart518

Version 0.1.8 (2017-08-03)
- UI fix (gid add button was broken)
- Link to repository was broken
- Removed "poc" from some old links
- Added IGNORE_PATTERN option @sytone

Version 0.1.7 (2017-04-27)
- Fixed incorrect numeric state option
- Removed check config option (HASS has changed, not useful anymore)
- Added reload for groups, core and automations
- Proper logging on the server side (useful for supervisor usage)
- Update Materialize + UI fixes

Version 0.1.6 (2017-03-28)
- Executing commands on remote machine now possbile (Issue #30)
- Using icons from https://materialdesignicons.com
- Icon browser added
- UI improvements

Version 0.1.5 (2017-02-28)
- UI improvements
- Added git init
- Added check_config API for HASS

Version 0.1.4 (2017-02-20)
- UI improvements
- Switch and create git branches

Version 0.1.3 (2017-02-17)
- Upload and download files
- Basic Git integration