@@ -1,6 +1,7 @@
 Version 0.2.6 (2018-)
 - Displaying current filename in title (Issue #76) @danielperna84
 - Added menu item to open configurator in new tab (Issue #76) @danielperna84
+- Automatically load last viewed (and not closed) file via localStorage @danielperna84
 
 Version 0.2.5 (2018-01-27)
 - Added warning-logs for access failure @danielperna84
